hopefully fixed horizontal scroll on mobile issue

--- a/frontend/src/components-css/Search.css
+++ b/frontend/src/components-css/Search.css
@@ -7,7 +7,7 @@
     padding: 0;
     width: auto;
     background-color: white;
-
+    overflow: hidden;
 }
 
 .title-container {
